[tool.poetry]
name = "python-htmx"
version = "0.1.0"
description = "Just testing HTMX with Python"
authors = ["hanshoi"]
readme = "README.md"
packages = [{ include = "python_htmx" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"
django-htmx = "^1.17.0"
django-tailwind-cli = "^2.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = {extras = ["d"], version = "^23.10.1"}
pytest = "^7.4.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
